@@ -1,0 +1,4 @@
+// $Id$
+project: taoclient {
+  exename = * 
+}
